--- a/index.html
+++ b/index.html
@@ -19,27 +19,35 @@
             </div>
             <div class="form">
                 <div class="fields">
-                    <form action="">Let's do this</form>
-                        <div class="field">
-                            <label for="first_name">FIRST NAME:</label>
+                        <div class="column">
+                            <div class="field">
+                                <label for="first_name">FIRST NAME</label>
+                                <input type="text" name="first_name" id="first_name">
+                            </div>
+                            <div class="field">
+                                <label for="email">EMAIL</label>
+                                <input type="email" name="email" id="email">
+                            </div>
+                            
+                            <div class="field">
+                                <label for="password">PASSWORD</label>
+                                <input type="password" name="password" id="password">
+                            </div>
                         </div>
-                            <input type="text" name="first_name" id="first_name">
+                    <div class="column">
                         <div class="field">
-                            <label for="last_name">LAST NAME:</label>
-                        </div>
-                            <input type="text" name="last_name" id="last_name">
-                        <div class="field">
-                            <label for="email">EMAIL:</label>
-                        </div>
-                            <input type="email" name="email" id="email">
-                        <div class="field">
-                            <label for="last_name">LAST NAME:</label>
-                        </div>
+                            <label for="last_name">LAST NAME</label>
                             <input type="text" name="first_name" id="last_name">
-                        <div class="field">
-                            <label for="last_name">LAST NAME:</label>
                         </div>
-                            <input type="text" name="first_name" id="last_name">
+                        <div class="field">
+                            <label for="phone_number">PHONE NUMBER</label>
+                            <input type="number" name="phone_number" id="phone_number">
+                        </div>
+                        <div class="field">
+                            <label for="confirm_password">CONFIRM PASSWORD</label>
+                            <input type="password" name="confirm_password" id="confirm_password">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="footer">
