Added the pictures to the left side of the form representing the iphone bezels, a picture of the office and a notch

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <div class="container">
         <div class="left-side">
-            <img src="src/iPhone 16 Pro Max - Desert Titanium - Portrait.png" alt="">
+            <img src="src/iPhone 16 Pro Max - Desert Titanium - Portrait.png" class="iphone" alt="">
+            <img src="src/office.jpeg" class="office" alt="">
+            <div class="notch"></div>
+            
         </div>
         <div class="right-side">
             <div class="header">
