Styled the right side of the form so that the different sections are properly displayed, added the logo over the pictures on the left side

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <img src="src/iPhone 16 Pro Max - Desert Titanium - Portrait.png" class="iphone" alt="">
             <img src="src/office.jpeg" class="office" alt="">
             <div class="notch"></div>
+            <img src="src/Facebook-picture-logo-2.0.png" class="logo" alt="">
             
         </div>
         <div class="right-side">
