--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="left-side">
             <img src="src/iPhone 16 Pro Max - Desert Titanium - Portrait.png" class="iphone" alt="">
-            <img src="src/office.jpeg" class="office" alt="">
+            <img src="src/office_02.jpeg" class="office" alt="">
             <div class="notch"></div>
             <img src="src/Facebook-picture-logo-2.0.png" class="logo" alt="">
             
@@ -55,6 +55,7 @@
                 </div>
             </div>
             <div class="footer">
+                <button>Create Account</button>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque velit nulla ab reiciendis accusamus delectus at, inventore, tenetur ipsam aut debitis id perspiciatis laboriosam accusantium provident, reprehenderit ipsa quisquam maiores.</p>
             </div>
         </div>
