Final commit, the project is done and it matches the requirements in the task description.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             
                             <div class="field">
                                 <label for="password">PASSWORD</label>
-                                <input type="password" name="password" id="password" class="password">
+                                <input type="password" name="password" id="password" class="password" minlength="4" maxlength="16">
                             </div>
                         </div>
                     <div class="column">
@@ -50,7 +50,7 @@
                         </div>
                         <div class="field">
                             <label for="confirm_password">CONFIRM PASSWORD</label>
-                            <input type="password" name="confirm_password" id="confirm_password">
+                            <input type="password" name="confirm_password" id="confirm_password" minlength="4" maxlength="16" class="confirm_password">
                         </div>
                     </div>
                 </div>
